Mon Nov  9 21:27:23 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_dig): new method Array#dig.

	* hash.c (rb_hash_dig): new method Hash#dig.

	* object.c (rb_obj_dig): dig in nested arrays/hashes.
	  [Feature #11643]

Mon Nov  9 18:00:47 2015  Yuki Nishijima  <mail@yukinishijima.net>

	* gems/bundled_gems: Upgrade the did_you_mean gem to 1.0.0.beta3

Mon Nov  9 17:38:14 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/runner.rb: use official repository for coverage tool.
	* Makefile.in: ditto.
	* common.mk: ditto.
	* .gitignore: ignored third party repositories.

Mon Nov  9 17:29:09 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* compile.c (iseq_compile_each): Dynamic string literals should be
	  frozen.
	  [ruby-core:57574] [Feature #8976]

Mon Nov  9 15:56:07 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* common.mk: Use ruby organization url for simplecov repository.

Sun Nov  8 16:24:09 2015  Masaki Matsushita <glass.saga@gmail.com>

	* NEWS: describe addition of File::TMPFILE

Sun Nov  8 15:19:17 2015  Masaki Matsushita <glass.saga@gmail.com>

	* file.c: Add O_TMPFILE.

Sun Nov  8 14:24:43 2015  windwiny  <windwiny.ubt@gmail.com>

	* method.h (METHOD_ENTRY_{VISI,BASIC,FLAGS}_SET): suppress
	  shift-op-parentheses warnings.  [Fix GH-1082]

Sun Nov  8 14:01:22 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/psych/psych_emitter.c: backport 5bd7744 from tenderlove/psych.
	  support backward compatibility of Ruby 2.0

Sun Nov  8 10:55:10 2015  Anton Davydov  <antondavydov.o@gmail.com>

	* io.c (rb_io_gets_m): Update IO#gets doc for characters more than
	  1 byte.  [Fix GH-1085]

Sun Nov  8 10:37:58 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/uri/ftp.rb: fix a typo.
	  [fix GH-1084][ci skip] Patch by @windwiny

Sun Nov  8 08:10:31 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (exec_hooks_precheck): check need_clean everytime
	  to clean-up unused hooks.

	* vm_trace.c (list->need_clean): use as boolean value.
